# check_system

./: .gitignore  CMakeLists.txt  README.html  README.md  check_system.pro  checksystem.service  main.c  main.cc  run.sh  screen.cpp
config/: base.cfg
demo/: pic.bak
demo/CKCameraSDK/demo/C++/: Makefile  frame_duration  frame_duration.cpp  main.cpp  soft_trigger.cpp
demo/CKCameraSDK/documents/: CKSDK_API_CHS.chm  CKSDK_API_ENG.chm
demo/CKCameraSDK/tools/aarch64/: camera_config
demo/CKCameraSDK/tools/armpi/: camera_config
demo/CKCameraSDK/tools/armsf/: camera_config
demo/CKCameraSDK/tools/x64/: camera_config  camera_test
demo/CKCameraSDK/tools/x86/: camera_config
demo/lcd/: screen.cpp
doc/: RS485通信协议1012.docx  RS485通信协议20210120.docx  system_info.docx  软件逻辑流程图0929.xlsx  软件逻辑流程图20210120.xlsx
doc/lcd图片/: 1186092103  1186092103_space  1341980764  1341980764_space  758369263  758369263_space
doc/软件人员编制文档/: 3.微型低功耗控制处理电路板-验收大纲.docx  4.微型低功耗控制处理电路板-使用说明.docx  软件人员文档编写说明.txt  附件1.RS485通信协议.docx
env/lib/: libboost_atomic.so.1.72.0  libboost_chrono.so.1.72.0  libboost_container.so.1.72.0  libboost_context.so.1.72.0  libboost_contract.so.1.72.0  libboost_coroutine.so.1.72.0  libboost_date_time.so.1.72.0  libboost_fiber.so.1.72.0  libboost_filesystem.so.1.72.0  libboost_graph.so.1.72.0  libboost_iostreams.so.1.72.0  libboost_locale.so.1.72.0  libboost_log.so.1.72.0  libboost_log_setup.so.1.72.0  libboost_math_c99.so.1.72.0  libboost_math_c99f.so.1.72.0  libboost_math_c99l.so.1.72.0  libboost_math_tr1.so.1.72.0  libboost_math_tr1f.so.1.72.0  libboost_math_tr1l.so.1.72.0  libboost_prg_exec_monitor.so.1.72.0  libboost_program_options.so.1.72.0  libboost_random.so.1.72.0  libboost_regex.so.1.72.0  libboost_serialization.so.1.72.0  libboost_stacktrace_basic.so.1.72.0  libboost_stacktrace_noop.so.1.72.0  libboost_system.so.1.72.0  libboost_thread.so.1.72.0  libboost_timer.so.1.72.0  libboost_type_erasure.so.1.72.0  libboost_unit_test_framework.so.1.72.0  libboost_wave.so.1.72.0  libboost_wserialization.so.1.72.0  libev.la  libev.so.4.0.0  libffi.la  libffi.so.7.1.0  libopencv_aruco.so.4.5.0  libopencv_bgsegm.so.4.5.0  (+47 more)
env/lib/cmake/boost_atomic-1.72.0/: boost_atomic-config.cmake  libboost_atomic-variant-shared.cmake  libboost_atomic-variant-static.cmake
env/lib/cmake/boost_chrono-1.72.0/: boost_chrono-config.cmake  libboost_chrono-variant-shared.cmake  libboost_chrono-variant-static.cmake
env/lib/cmake/boost_container-1.72.0/: boost_container-config.cmake  libboost_container-variant-shared.cmake  libboost_container-variant-static.cmake
env/lib/cmake/boost_context-1.72.0/: boost_context-config.cmake  libboost_context-variant-shared.cmake  libboost_context-variant-static.cmake
env/lib/cmake/boost_contract-1.72.0/: boost_contract-config.cmake  libboost_contract-variant-shared.cmake  libboost_contract-variant-static.cmake
env/lib/pkgconfig/: libffi.pc  opencv4.pc
env/opencv/lib/: libopencv_aruco.so.3.4.12  libopencv_bgsegm.so.3.4.12  libopencv_bioinspired.so.3.4.12  libopencv_calib3d.so.3.4.12  libopencv_ccalib.so.3.4.12  libopencv_core.so.3.4.12  libopencv_datasets.so.3.4.12  libopencv_dnn.so.3.4.12  libopencv_dnn_objdetect.so.3.4.12  libopencv_dpm.so.3.4.12  libopencv_face.so.3.4.12  libopencv_features2d.so.3.4.12  libopencv_flann.so.3.4.12  libopencv_fuzzy.so.3.4.12  libopencv_hfs.so.3.4.12  libopencv_highgui.so.3.4.12  libopencv_img_hash.so.3.4.12  libopencv_imgcodecs.so.3.4.12  libopencv_imgproc.so.3.4.12  libopencv_line_descriptor.so.3.4.12  libopencv_ml.so.3.4.12  libopencv_objdetect.so.3.4.12  libopencv_optflow.so.3.4.12  libopencv_phase_unwrapping.so.3.4.12  libopencv_photo.so.3.4.12  libopencv_plot.so.3.4.12  libopencv_reg.so.3.4.12  libopencv_rgbd.so.3.4.12  libopencv_saliency.so.3.4.12  libopencv_shape.so.3.4.12  libopencv_stereo.so.3.4.12  libopencv_stitching.so.3.4.12  libopencv_structured_light.so.3.4.12  libopencv_superres.so.3.4.12  libopencv_surface_matching.so.3.4.12  libopencv_text.so.3.4.12  libopencv_tracking.so.3.4.12  libopencv_video.so.3.4.12  libopencv_videoio.so.3.4.12  libopencv_videostab.so.3.4.12  (+5 more)
src/: CKCameraInterface.h  CMakeLists.txt  authpic.cc  authpic.h  camera_manager.cc  camera_manager.h  cmdline.h  constant.h  epollrepertory.cc  epollrepertory.h  eventmanager.cc  eventmanager.h  fd_manager.h  fingerprint.cpp  fingerprint.h  global_arg.cc  global_arg.h  hostcontroller.cc  hostcontroller.h  imtrans_my.h  key_file.cc  key_file.h  laser.cc  laser.h  lcd.cc  lcd.h  led.cc  led.h  main.cc  mutils.cc  mutils.h  screen_manager.h  state_machine.cc  state_machine.h  usart.cc  usart.h  utils.cc  utils.h
src/gabor_im/: bluesteinSetup.cpp  bluesteinSetup.h  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  cosd.cpp  cosd.h  createNormalizedFrequencyVector.cpp  createNormalizedFrequencyVector.h  fft1.cpp  fft1.h  fft2.cpp  fft2.h  gabor_im.cpp  gabor_im.h  gabor_im_data.cpp  gabor_im_data.h  gabor_im_emxAPI.cpp  gabor_im_emxAPI.h  gabor_im_emxutil.cpp  gabor_im_emxutil.h  gabor_im_initialize.cpp  gabor_im_initialize.h  gabor_im_rtw.bat  gabor_im_rtw.mk  gabor_im_rtw.rsp  gabor_im_rtwutil.cpp  gabor_im_rtwutil.h  gabor_im_terminate.cpp  gabor_im_terminate.h  gabor_im_types.h  gcGuiReport.mat  imgaborfilt.cpp  imgaborfilt.h  ipermute.cpp  ipermute.h  padarray.cpp  padarray.h  power.cpp  power.h  (+11 more)
src/gabor_im/examples/: main.cpp  main.h
src/gabor_im/html/: report.mldatx
src/gabor_im/interface/: _coder_gabor_im_api.c  _coder_gabor_im_api.h  _coder_gabor_im_info.c  _coder_gabor_im_info.h  _coder_gabor_im_mex.cpp  _coder_gabor_im_mex.h
test/: CMakeLists.txt  Makefile  a.out  camera.cpp  camera_test.cc  laser_test  laser_test.cpp  open_vga.sh  screen.cpp
test/CKCameraSDK/: readme.txt
test/CKCameraSDK/lib/: readme.txt
test/arm/: CMakeLists.txt  TestImage_arm  run.sh
test/res/: pic1.xcf
test/src/: calc_two_pic.cpp  camera_test.cc  gpio_test.cc  laser_test.cpp  main.cpp  onlyauth.cpp  screen_test.cpp
test/src/include/: CKCameraInterface.h  CKDeviceDef.h
test/x64/: CMakeLists.txt  TestImage_x64
test/x64/config/: camera.cfg
(+175 files in other folders)
